# agency

./: App.jsx  DEVLOG.md  README.md  index.html  next.config.js  package.json
api/: chat.js
app/: layout.tsx  page.tsx
app/api/gemini/: route.ts
backend/: pyproject.toml
backend/src/: config.py
backend/src/agents/: __init__.py  text_agent.py  voice_agent.py
backend/src/api/: routes.py
backend/src/tools/: __init__.py  documents.py  index.py  search.py
backend/tests/: conftest.py  test_text_agent.py  test_tools.py  test_voice_agent.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx
frontend/src/components/: AudioVisualizer.tsx  ReferencedFiles.tsx  VoiceAgent.tsx  VoiceControls.tsx
frontend/src/hooks/: useReferencedFiles.ts
netlify/functions/: chat.js
